[package]
name = "arcalog"
readme = "README.md"
description = "Automated/assisted root cause analysis in various logging systems including CI"
categories = ["command-line-utilities", "data-structures", "encoding", "text-processing", "visualization"]
keywords = ["log", "analysis", "debugging", "ci", "data"]
repository = "https://github.com/arcalot/arcalog"
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
signal-hook = "0.3.4"
chrono = "0.4"
regex = "1.6"
async-recursion = "1.0.0"
reqwest = { version = "0.11.11", features = ["json"] }
axum = "0.5.15"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde = { version = "1.0.142", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "2.0.0"