[package]
name = "arcalog"
readme = "README.md"
description = "Automated/assisted root cause analysis in various logging systems including CI"
categories = ["command-line-utilities", "data-structures", "encoding", "text-processing", "visualization"]
keywords = ["log", "analysis", "debugging", "ci", "data"]
repository = "https://github.com/arcalot/arcalog"
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
signal-hook = "0.3.17"
chrono = "0.4"
regex = "1.10"
async-recursion = "1.1.0"
reqwest = { version = "0.12.2", features = ["json"] }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.7.0"